--- a/src/AppBundle/Resources/views/Default/defaultbase.html.twig
+++ b/src/AppBundle/Resources/views/Default/defaultbase.html.twig
@@ -4,7 +4,7 @@
 {% endblock %} 
 
 {% block navbar %}
-    <nav class="navbar navbar-default navbar-fixed-top" style="background-color: transparent; border: 0px;">
+    <nav class="navbar navbar-default navbar-top" style="background-color: transparent; border: 0px;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
