--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -81,7 +81,7 @@
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
             <div class="col-md-6">
                 <a href="{{path('app_connecting')}}" class="btn btn-danger btn-lg textCentered" role="button"
-                   style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Two player</a>
+                   style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Random game</a>
             </div>
             <div class="col-md-6">
                 <a href="{{path('app_sologame')}}" class="btn btn-danger btn-lg textCentered" role="button"
