--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -51,14 +51,14 @@
 
         </div>
 
-        <div style="min-height:20em;"></div>
+        <div class="col-md-12" style="min-height:20em;"></div>
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
             <h1 style="font-family:'Arcade Rounded';font-weight:normal;font-size:12px; text-align: center;">Game created by Peter Csatai</h1>
 
 
 
         </div>
-        <div class="col-md-12" style="min-height:50px;"></div>
+        <div class="col-md-12" style="min-height:20em;"></div>
         
     </div>
 {% endblock %}
