--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -21,6 +21,7 @@
 
     <div class="container">
         <div class="col-md-12" style="min-height:2em;"></div>
+        <input type="text" name="firstname"><br>
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
             <h1 style="font-family:'Arcade Interlaced';font-weight:normal;font-size:42px; text-align: center;">Connect four</h1>
 
