--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -22,12 +22,8 @@
     <div class="container">
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
             <h1 style="font-family:'Arcade Interlaced';font-weight:normal;font-size:42px; text-align: center;">Connect four</h1>
-
-
-
         </div>
-
-
+        <div class="col-xs-12" style="height:5em;"></div>
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-centered">
 
             {{ form_start(form, {'attr': {'style': 'font-family:"Arcade Rounded";font-weight:normal;font-size:20px; text-align: center;'}}) }}
