--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -68,7 +68,7 @@
         <div class="col-md-12 textCentered">
             <h1 class="centered" style="font-family:'Arcade Interlaced';font-weight:normal;font-size:42px">Connect four</h1>
         </div>
-        <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+        <div class="container">
             <div class="col-md-6">
                 <a href="{{path('app_connecting')}}" class="btn btn-danger btn-lg textCentered" role="button"
                    style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Random game</a>
@@ -77,7 +77,7 @@
                 <a href="{{path('app_sologame')}}" class="btn btn-danger btn-lg textCentered" role="button"
                    style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Play solo</a>
             </div>
-        </div>
+        </div>      
     </div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6" style="margin-top:20px; padding: 20px;">
         <div id="playerList" class="panel panel-default" style="font-family:'Arcade Rounded'">
