--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -70,7 +70,7 @@
         </div>
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
             <div class="col-md-6">
-                <a href id="playUser" style="font-family:'Arcade Rounded'" class="btn btn-success btn-sm playUser" role="button">Play</a>
+                <a href="{{path('app_connecting')}}" style="font-family:'Arcade Rounded'" class="btn btn-danger btn-md" role="button">Random game</a>
             </div>
             <div class="col-md-6">
                 <a href="{{path('app_sologame')}}" class="btn btn-danger btn-lg textCentered" role="button"
