--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -69,7 +69,7 @@
             <h1 class="centered" style="font-family:'Arcade Interlaced';font-weight:normal;font-size:42px">Connect four</h1>
         </div>
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-            <div class="col-md-6">
+            <div class="col-md-6 textCentered">
                 <a href="{{path('app_connecting')}}" style="font-family:'Arcade Rounded'" class="btn btn-danger btn-md" role="button">Random game</a>
             </div>
             <div class="col-md-6">
