--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -72,9 +72,8 @@
             <div class="col-md-6 textCentered">
                 <a href="{{path('app_connecting')}}" style="font-family:'Arcade Rounded'" class="btn btn-danger btn-md" role="button">Random game</a>
             </div>
-            <div class="col-md-6">
-                <a href="{{path('app_sologame')}}" class="btn btn-danger btn-lg textCentered" role="button"
-                   style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Play solo</a>
+            <div class="col-md-6 textCentered">
+                <a href="{{path('app_sologame')}}" style="font-family:'Arcade Rounded'" class="btn btn-danger btn-md" role="button">Play solo</a>
             </div>
         </div>      
     </div>
