--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -70,10 +70,10 @@
         </div>
         <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
             <div class="col-md-6 textCentered">
-                <a href="{{path('app_connecting')}}" style="padding: 2px;font-family:'Arcade Rounded'" class="btn btn-danger btn-lg" role="button">Random game</a>
+                <a href="{{path('app_connecting')}}" style="margin: 2px;font-family:'Arcade Rounded'" class="btn btn-danger btn-lg" role="button">Random game</a>
             </div>
             <div class="col-md-6 textCentered">
-                <a href="{{path('app_sologame')}}" style="padding:2px; font-family:'Arcade Rounded'" class="btn btn-danger btn-lg" role="button">Play solo</a>
+                <a href="{{path('app_sologame')}}" style="margin:2px; font-family:'Arcade Rounded'" class="btn btn-danger btn-lg" role="button">Play solo</a>
             </div>
         </div>      
     </div>
