--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -56,7 +56,7 @@
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="blue"></div>
         <div class="col-md-12 textCentered" style="min-height:20px; font-family:'Arcade Rounded';font-weight:normal;font-size:28px" id="victory"></div>
         <div id="playAgain" class="col-xs-12 textCentered" style="display:none;">
-            <p><a href="{{path('app_sologame')}}" class="btn btn-success btn-sm playUser" style="font-family:'Arcade Rounded'" role="button">Play again</a></p>
+            <p><a href="#" class="btn btn-success btn-sm playUser" style="font-family:'Arcade Rounded'" role="button">Play again</a></p>
             <p><a href="{{path('app_main')}}" class="btn btn-danger btn-sm cancelButton" style="font-family:'Arcade Rounded'" role="button">Not now!</a></p>
         </div>
     </div>
