--- a/src/AppBundle/Resources/views/Default/game.html.twig
+++ b/src/AppBundle/Resources/views/Default/game.html.twig
@@ -55,12 +55,69 @@
             pointer-events: none;
             cursor: default;
         }
-
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 70%;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .mypanel {
+            background-image: url("{{asset('bundles/app/images/c64loading.gif')}}");
+            min-height: 250px;
+        }
+        .centered {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .arcadeText {
+            font-family:'Arcade Rounded';
+            text-align: center;
+        }
     </style>
 
 {% endblock %}        
 
 {% block body %}
+    
+    {#MODAL BOX#}
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">x</span>
+            <p id="modalContent" style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px"></p>
+            <div class="centered">
+                <p><a href id="playUser" style="font-family:'Arcade Rounded'" class="btn btn-success btn-sm playUser" role="button">Play</a></p>
+                <p><a href id="notNow" style="font-family:'Arcade Rounded'" class="btn btn-danger btn-sm cancelButton" role="button">Not now!</a></p>
+            </div>
+        </div>
+    </div>
 
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
         <div class="col-xs-12" style="height:0.5em;"></div>
@@ -77,9 +134,13 @@
         <div id="victory-red" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px"></div>
         <div id="redName" {% if myColor == 'red' %} action-name="{{user.userName}}"{% else %}action-name="{{opponent.name}}" {% endif %} ></div>
         <div id="blueName" {% if myColor == 'blue' %} action-name="{{user.userName}}"{% else %}action-name="{{opponent.name}}" {% endif %} ></div>
+        <div id="playAgain" class="col-xs-12 textCentered" style="display:none;">
+            <p><a href="#" id="newGame" class="btn btn-success btn-sm playUser" style="font-family:'Arcade Rounded'" role="button">Play again</a></p>
+            <p><a href="{{path('app_main')}}" class="btn btn-danger btn-sm cancelButton" style="font-family:'Arcade Rounded'" role="button">Not now!</a></p>
+        </div>
     </div>
 
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol" id="myMainPanel">
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
@@ -218,9 +279,9 @@
 
     <script>
         $(document).ready(function () {
-            
-            
-            
+
+
+
             //report to the server the player is online every 15 sec
             $(function () {
                 setInterval(function () {
@@ -265,7 +326,7 @@
                             if (response.oppMove == 'no opponent') {
                                 $('#statusMessage').html('{{opponent.name}}' + ' has left the game!');
                             } else {
-                            //console.log(response.oppMove);
+                                //console.log(response.oppMove);
                                 if (response.oppMove != 'no move') {
                                     connectModule.oppmove(response.oppMove);
                                     enableChevron();
@@ -292,7 +353,7 @@
                     disableChevron();
                 }
                 if (startmove != true) {
-                    $('#statusMessage').html('Waiting for '+ '{{opponent.name}}');
+                    $('#statusMessage').html('Waiting for ' + '{{opponent.name}}');
                     $('#statusMessage').attr('move-name', '{{opponent.name}}');
                 } else {
                     $('#statusMessage').html('my move');
@@ -309,14 +370,14 @@
             function enableChevron() {
                 $('.moveHref').removeClass('disabled');
             }
-            
+
             function changePlayerStatus() {
                 var movePlayer = $('#statusMessage').attr('move-name');
-                if(movePlayer === '{{opponent.name}}') {
+                if (movePlayer === '{{opponent.name}}') {
                     $('#statusMessage').attr('move-name', '{{myPlayer.name}}');
                     $('#statusMessage').html('my move');
                 } else {
-                    $('#statusMessage').html('Waiting for '+ '{{opponent.name}}');
+                    $('#statusMessage').html('Waiting for ' + '{{opponent.name}}');
                     $('#statusMessage').attr('move-name', '{{opponent.name}}');
                 }
             }
@@ -353,9 +414,134 @@
                     });
                 }
                 e.preventDefault();
-
             });
             
+            //click to play with a user
+            $(document).on('click', "#newGame", function (e) {
+                e.preventDefault();
+                var oppId = '{{opponent.id}}';
+                var oppName = '{{opponent.name}}';
+                console.log(oppId);
+                $('#myMainPanel').addClass('mypanel');
+                var appNode = '<div class="col-md-12" style="min-height: 50px"></div><div class="arcadeText col-md-12" style="font-size:30px;color:white;">Requesting ' + oppName + '</div>\n\
+                                <div class="col-md-12" style="min-height: 25px"></div><div class="col-sm-offset-5 col-sm-2 textCentered" style="min-height: 25px;"><a href="PLACEHOLDER" class="btn btn-danger btn-sm textCentered arcadeText" role="button">CANCEL</a></div>';
+                var buttonUrl = '{{ path('app_main')}}';
+                var newNode = appNode.replace('PLACEHOLDER', buttonUrl);
+                $('#myMainPanel').html(newNode);
+                var data = {'oppId': oppId};
+                $.ajax({
+                    url: "{{ path('app_ajaxplayuser')}}",
+                    type: 'POST',
+                    cache: false,
+                    data: data,
+                    dataType: "json",
+                    success: function (response) {
+                        console.log(response);
+                        connectUser();
+                    }
+                });
+            });
+            
+            //reject user with not now button. send oppId with ajax and set opp status to 4(reject)
+            $(document).on('click', "#notNow", function (e) {
+                e.preventDefault();
+                var oppId = $(this).attr('action-data');
+                console.log(oppId);
+                var data = {'oppId': oppId};
+                $.ajax({
+                    url: "{{ path('app_ajaxrejectplay')}}",
+                    type: 'POST',
+                    cache: false,
+                    data: data,
+                    dataType: "json",
+                    success: function (response) {
+                        console.log(response);
+                        if(response) {
+                            window.location.href = "{{ path('app_main')}}";
+                        } 
+                    }
+                });
+            });
+            
+            //accept new game from modal window
+            $(document).on('click', "#playUser", function (e) {
+                e.preventDefault();
+                var modal = document.getElementById('myModal');
+                modal.style.display = "none";
+                var oppId = $(this).attr('action-data');
+                console.log('button pressed');
+                console.log(oppId);
+
+                var myUrl = "{{path('app_ajaxconnectuser')}}";
+                var data = {'oppId': oppId};
+                $.ajax({
+                    type: 'POST',
+                    url: myUrl,
+                    cache: false,
+                    data: data,
+                    dataType: "json",
+                    success: function (response) {
+                        console.log(response);
+                        if (response == 'opponent exist') {
+                            window.location.href = "{{ path('app_game')}}";
+                        }
+                    },
+                    complete: function () {
+                        //console.log('Request is complete');
+                    },
+                    error: function () {
+                        console.log('Oops...there was an error!');
+                    }
+                });
+            });
+            
+            //check modal message
+            $(function () {
+                setInterval(function () {
+                    $.ajax({
+                        url: "{{ path('app_ajaxmodalcheck')}}",
+                        dataType: "json",
+                        success: function (response) {
+                            if (response.oppId != 'no') {
+                                console.log('modal exist');
+                                var modal = document.getElementById('myModal');
+                                var contentDiv = document.getElementById('modalContent');
+                                $('#playUser').attr('action-data', response.oppId);
+                                $('#notNow').attr('action-data', response.oppId);
+                                contentDiv.innerHTML = response.oppName + ' wants to play with you!';
+                                modal.style.display = "block";
+                                console.log(response);
+                            }
+                            console.log(response);
+                        }
+                    });
+                }, 3000);
+            });
+            
+            //check if the user accepted my play request. If the message 'rejected' redirect to main page
+            function connectUser() {
+                setInterval(function () {
+                    $.ajax({
+                        url: "{{ path('app_ajaxcheckmystatus')}}",
+                        dataType: "json",
+                        success: function (response) {
+                            if (response !== 'no result') {
+                                if (response == 'opponent exist') {
+                                    window.location.href = "{{ path('app_game')}}";
+                                }
+                                if (response == 'rejected') {
+                                    window.location.href = "{{ path('app_main')}}";
+                                }
+                            } else {
+                                console.log('interval on');
+                            }
+                        }
+                    });
+                }, 3000);
+            }
+            
+            
+
         });
     </script>
 
