--- a/src/AppBundle/Resources/views/Default/mainpage.html.twig
+++ b/src/AppBundle/Resources/views/Default/mainpage.html.twig
@@ -55,7 +55,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">x</span>
-            <p id="modalContent" style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px"></p>
+            <p id="modalContent" style="font-family:'Arcade Rounded';font-weight:normal;font-size:20px;text-align: center;"></p>
             <div class="centered">
                 <p><a href id="playUser" style="font-family:'Arcade Rounded'" class="btn btn-success btn-sm playUser" role="button">Play</a></p>
                 <p><a href id="notNow" style="font-family:'Arcade Rounded'" class="btn btn-danger btn-sm cancelButton" role="button">Not now!</a></p>
