--- a/src/AppBundle/Resources/views/Default/game.html.twig
+++ b/src/AppBundle/Resources/views/Default/game.html.twig
@@ -99,12 +99,21 @@
             font-family:'Arcade Rounded';
             text-align: center;
         }
+        #canvas-container {
+            width: 100%;
+            text-align:center;
+        }
+        canvas {
+            display: inline;
+            background: url("{{asset('bundles/app/images/con4sym2.png')}}");
+            background-size: 100% 100%;
+        }
     </style>
 
 {% endblock %}        
 
 {% block body %}
-    
+
     {#MODAL BOX#}
     <div id="myModal" class="modal">
 
@@ -129,9 +138,9 @@
             <span id="statusMessage" style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px"> </span>
         </p>
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="{{startColor}}"></div>
-        <div class="col-xs-12" style="min-height:20px; font-family:'Arcade Interlaced';font-weight:normal;font-size:32px" class="victory" id="victory"></div>
-        <div id="victory-blue" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px"></div>
-        <div id="victory-red" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px"></div>
+        <div class="col-xs-12" style="min-height:20px; font-family:'Arcade Interlaced';font-weight:normal;font-size:32px;text-align: center;" class="victory" id="victory"></div>
+        <div id="victory-blue" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px; text-align: center;"></div>
+        <div id="victory-red" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px; text-align: center;"></div>
         <div id="redName" {% if myColor == 'red' %} action-name="{{user.userName}}"{% else %}action-name="{{opponent.name}}" {% endif %} ></div>
         <div id="blueName" {% if myColor == 'blue' %} action-name="{{user.userName}}"{% else %}action-name="{{opponent.name}}" {% endif %} ></div>
         <div id="playAgain" class="col-xs-12 textCentered" style="display:none;">
@@ -144,7 +153,7 @@
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
-            <div class="panel panel-info" id="colMain1">
+            <div class="panel panel-info" id="colMain1" style="display: none;">
                 <div class="place row6" id="col16">
                 </div>
                 <div class="place row5" id="col15">
@@ -162,7 +171,7 @@
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="b-col"><span data-action="col2" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
-            <div class="panel panel-info" id="colMain2">
+            <div class="panel panel-info" id="colMain2" style="display: none;">
                 <div class="place row6" id="col26">
                 </div>
                 <div class="place row5" id="col25">
@@ -180,7 +189,7 @@
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="c-col"><span data-action="col3" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
-            <div class="panel panel-info" id="colMain3">
+            <div class="panel panel-info" id="colMain3" style="display: none;">
                 <div class="place row6" id="col36" >
                 </div>
                 <div class="place row5" id="col35" >
@@ -197,7 +206,7 @@
         </div>
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="d-col"><span data-action="col4" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-            <div class="panel panel-info" id="colMain4">
+            <div class="panel panel-info" id="colMain4" style="display: none;">
                 <div class="place row6" id="col46" >
                 </div>
                 <div class="place row5" id="col45" >
@@ -214,7 +223,7 @@
         </div>
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="e-col"><span data-action="col5" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-            <div class="panel panel-info" id="colMain5">
+            <div class="panel panel-info" id="colMain5" style="display: none;">
                 <div class="place row6" id="col56" >
                 </div>
                 <div class="place row5" id="col55" >
@@ -231,7 +240,7 @@
         </div>
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="f-col"><span data-action="col6" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-            <div class="panel panel-info" id="colMain6">
+            <div class="panel panel-info" id="colMain6" style="display: none;">
                 <div class="place row6" id="col66" >
                 </div>
                 <div class="place row5" id="col65" >
@@ -248,7 +257,7 @@
         </div>
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="g-col"><span data-action="col7" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-            <div class="panel panel-info" id="colMain7">
+            <div class="panel panel-info" id="colMain7" style="display: none;">
                 <div class="place row6" id="col76" >
                 </div>
                 <div class="place row5" id="col75" >
@@ -271,16 +280,93 @@
     </div>
 
 
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6" style="background-color: lightblue;" id="referenceCol">
+    </div>
+    <div id="canvas-container">
+        <canvas id="canvas" width="400" height="380" style="border:0px;">
+            This text is displayed if your browser does not support HTML5 Canvas.
+        </canvas>
+    </div>
+
+
+
+
+
 {% endblock %}   
 
 {% block javascript %}
+    <script src="{{asset('bundles/app/js/column.js')}}"></script>
     <script src="{{asset('bundles/app/js/mygame.js')}}"></script>
 
 
     <script>
+        (function () {
+            var lastTime = 0;
+            var vendors = ['ms', 'moz', 'webkit', 'o'];
+            for (var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
+                window.requestAnimationFrame = window[vendors[x] + 'RequestAnimationFrame'];
+                window.cancelAnimationFrame = window[vendors[x] + 'CancelAnimationFrame']
+                        || window[vendors[x] + 'CancelRequestAnimationFrame'];
+            }
+
+            if (!window.requestAnimationFrame)
+                window.requestAnimationFrame = function (callback, element) {
+                    var currTime = new Date().getTime();
+                    var timeToCall = Math.max(0, 16 - (currTime - lastTime));
+                    var id = window.setTimeout(function () {
+                        callback(currTime + timeToCall);
+                    },
+                            timeToCall);
+                    lastTime = currTime + timeToCall;
+                    return id;
+                };
+
+            if (!window.cancelAnimationFrame)
+                window.cancelAnimationFrame = function (id) {
+                    clearTimeout(id);
+                };
+        }());
+
         $(document).ready(function () {
 
+            //resize canvas when load the page
+            var colWidth = $("#referenceCol").width();
+            function resizeCanvas() {
+                var canvas = $("#canvas");
+                canvas.attr('width', colWidth);
+                globalColWidht = canvas.width();
+            }
+            resizeCanvas();
 
+            //resize canvas when change the window
+            var waitForFinalEvent = (function () {
+                var timers = {};
+                return function (callback, ms, uniqueId) {
+                    if (!uniqueId) {
+                        uniqueId = "Don't call this twice without a uniqueId";
+                    }
+                    if (timers[uniqueId]) {
+                        clearTimeout(timers[uniqueId]);
+                    }
+                    timers[uniqueId] = setTimeout(callback, ms);
+                };
+            })();
+
+            $(window).resize(function () {
+                waitForFinalEvent(function () {
+                    var oldWidth = $("#canvas").css("width").replace("px", "");
+                    var oldHeight = $("#canvas").css("height").replace("px", "");
+                    var canvas = $("#canvas");
+                    $("#canvas").css({
+                        "width": $("#referenceCol").width(),
+                        "height": $("#canvas").height()
+                    });
+                    var ratio1 = oldWidth / window.innerWidth;
+                    var ratio2 = oldHeight / window.innerHeight;
+                    canvas.ctx.scale(ratio1, ratio2);
+                    globalColWidht = canvas.width();
+                }, 500, "some unique string");
+            });
 
             //report to the server the player is online every 15 sec
             $(function () {
@@ -308,7 +394,6 @@
                 }, 15000);
             });
 
-
             //check opponent move
             $(function () {
                 setInterval(function () {
@@ -333,7 +418,6 @@
                                     changePlayerStatus();
                                 }
                             }
-                            //console.log(response);
                         },
                         complete: function () {
                             //console.log('Request is complete');
@@ -415,7 +499,7 @@
                 }
                 e.preventDefault();
             });
-            
+
             //click to play with a user
             $(document).on('click', "#newGame", function (e) {
                 e.preventDefault();
@@ -441,7 +525,7 @@
                     }
                 });
             });
-            
+
             //reject user with not now button. send oppId with ajax and set opp status to 4(reject)
             $(document).on('click', "#notNow", function (e) {
                 e.preventDefault();
@@ -456,13 +540,13 @@
                     dataType: "json",
                     success: function (response) {
                         console.log(response);
-                        if(response) {
+                        if (response) {
                             window.location.href = "{{ path('app_main')}}";
-                        } 
+                        }
                     }
                 });
             });
-            
+
             //accept new game from modal window
             $(document).on('click', "#playUser", function (e) {
                 e.preventDefault();
@@ -494,7 +578,7 @@
                     }
                 });
             });
-            
+
             //check modal message
             $(function () {
                 setInterval(function () {
@@ -517,7 +601,7 @@
                     });
                 }, 3000);
             });
-            
+
             //check if the user accepted my play request. If the message 'rejected' redirect to main page
             function connectUser() {
                 setInterval(function () {
@@ -539,10 +623,108 @@
                     });
                 }, 3000);
             }
-            
-            
-
         });
+        
+        //animation FROM HERE
+        
+        function calculateX(col) {
+            var colWidth = globalColWidht;
+            var mainX = colWidth / 7;
+            var correctX = mainX / 2;
+            var colX = mainX * col - correctX;
+            return colX;
+        }
+
+        function calculateY(col) {
+            var mainY = $("#canvas").height() / 6;
+            var correctY = mainY / 2;
+            var row = COLUMN.getCol('col' + col) + 1;
+            var colY = $("#canvas").height() - row * mainY + correctY;
+            return colY;
+        }
+        
+        //display controller
+        function triggerDisplay(col, color) {
+            animate(col, color);
+            //displayCols();
+        }
+
+
+
+
+        function drawCircle(x, y, color, col) {
+            var mainCanvas = document.querySelector("#canvas");
+            var mainContext = mainCanvas.getContext("2d");
+            if (color === 'blue') {
+                var myColor = "#006699";
+            } else {
+                var myColor = "#d9534f";
+            }
+
+            // draw the circle
+            mainContext.beginPath();
+            var radius = 20;
+            mainContext.arc(x, y, radius, 0, Math.PI * 2, false);
+            mainContext.closePath();
+            // color in the circle
+            mainContext.fillStyle = myColor;
+            mainContext.fill();
+            COLUMN.addCol('col' + col);
+        }
+        
+        //animation
+        function animate(col, color) {
+            var mainCanvas = document.querySelector("#canvas");
+            var mainContext = mainCanvas.getContext("2d");
+            if (color === 'blue') {
+                var myColor = "#006699";
+            } else {
+                var myColor = "#d9534f";
+            }
+            var Ypos = 0;
+            var speed = 2;
+            var acceleration = 1;
+            var Ymax = calculateY(col);
+            var Xpos = calculateX(col);
+
+            //calculate radius
+            var colWidth = $("#referenceCol").width();
+            if (colWidth < 350) {
+                var radius = 16;
+            } else {
+                var radius = 20;
+            }
+
+            function draw() {
+                requestID = requestAnimationFrame(draw);
+
+                // Drawing code goes here
+                mainContext.clearRect(Xpos - 22, Ypos - 50 + speed * acceleration, 60, 60);
+                mainContext.beginPath();
+                mainContext.arc(Xpos, Ypos + speed, radius, 0, Math.PI * 2, false);
+                mainContext.closePath();
+                // color in the circle
+                mainContext.fillStyle = myColor;
+                mainContext.fill();
+                if (Ypos >= Ymax) {
+                    mainContext.clearRect(Xpos - 22, Ypos - 50 + speed * acceleration, 60, 70);
+                    cancelAnimationFrame(requestID);
+                    drawCircle(calculateX(col), calculateY(col), color, col);
+                }
+                Ypos += speed * acceleration;
+                acceleration += 0.15;
+            }
+            draw();
+        }
+        
+        
+        
+        
+        
+        
+        
+        
+        
     </script>
 
 
