--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -60,13 +60,13 @@
 
 {% block body %}
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-        <p class="centered">
+        <div class="centered" style="margin-top:-20px;">
             <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Opponent: computer</span>
-        </p>
-        <p class="centered">
+        </div>
+        <div class="centered">
             <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px">Status: </span>
             <span id="statusMessage" move-name="{{user.userName}}" style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px"> my move</span>
-        </p>
+        </div>
 
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="blue"></div>
         <div class="col-md-12 textCentered" style="min-height:10px; font-family:'Arcade Rounded';font-weight:normal;font-size:28px" id="victory"></div>
