--- a/src/AppBundle/Resources/views/Default/game.html.twig
+++ b/src/AppBundle/Resources/views/Default/game.html.twig
@@ -129,14 +129,13 @@
     </div>
 
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-        <div class="col-xs-12" style="height:0.5em;"></div>
-        <p class="centered">
-            <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:20px">Opponent: {{opponent.name}} </span>
-        </p>
-        <p class="centered">
+        <div class="centered" style="margin-top:-20px;">
+            <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Opponent: {{opponent.name}} </span>
+        </div>
+        <div class="centered">
             <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px">Status: </span>
             <span id="statusMessage" style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px"> </span>
-        </p>
+        </div>
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="{{startColor}}"></div>
         <div class="col-xs-12" style="min-height:20px; font-family:'Arcade Interlaced';font-weight:normal;font-size:32px;text-align: center;" class="victory" id="victory"></div>
         <div id="victory-blue" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px; text-align: center;"></div>
