--- a/src/AppBundle/Resources/views/Default/game.html.twig
+++ b/src/AppBundle/Resources/views/Default/game.html.twig
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol" id="myMainPanel">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol" style="margin-top:-10px;" id="myMainPanel">
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
