--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -258,7 +258,34 @@
         }());
 
         $(document).ready(function () {
+            //animate chevron movement onece when the page loaded
+            $(function () {
+                var chevDirection = -1;
+                var counter = 0;
+                //animation
+                function animateChevron() {
+                    var position = 0;
+                    var limit = -15;
 
+                    function draw() {
+                        requestID = requestAnimationFrame(draw);
+                        $('.myChevron').css('margin-top', position);
+                        // Drawing code goes here
+                        if (counter >= 120) {
+                            cancelAnimationFrame(requestID);
+                        }
+                        position += chevDirection;
+                        counter += 1;
+                        if (position === limit) {
+                            chevDirection = 1;
+                        } else if (position === 0) {
+                            chevDirection = -1;
+                        }
+                    }
+                    draw();
+                }
+                animateChevron();
+            });
 
             var colWidth = $("#referenceCol").width();
 
