--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -36,6 +36,7 @@
         }
         .chevronDiv {
             min-height: 35px;
+            text-align:center;
         }
         #canvas-container {
             width: 100%;
